// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ActionBar /> should add shadow and gutters 1`] = `
<div
  className="ebpCEU"
/>
`;

exports[`<ActionBar /> should omit shadow and gutters 1`] = `
<div
  className="fZlqek"
/>
`;

exports[`<BottomActionBar /> should add shadow and gutters 1`] = `
<div
  className="kWgXZK"
/>
`;

exports[`<BottomActionBar /> should omit shadow and gutters 1`] = `
<div
  className="ciXEFM"
/>
`;
